# easel-libraw

./: Cargo.toml  README.md
crates/fail/: Cargo.toml
crates/fail/src/: lib.rs
crates/ffi/: Cargo.toml  build.rs
crates/image/: Cargo.toml
crates/image/src/: lib.rs
crates/libraw/: Cargo.toml  build.rs
crates/libraw/src/: adapter.rs  decode.rs  error.rs  image.rs  lib.rs
crates/libraw/tests/: decode.rs  error.rs  image.rs
crates/raw-decoder/: Cargo.toml
crates/raw-decoder/src/: lib.rs
